fix(class): fix beamer options

--- a/makefiles/preamble/class/beamer.tex
+++ b/makefiles/preamble/class/beamer.tex
@@ -4,7 +4,7 @@ hyperref={unicode},
 % Использование шрифтов с засечками
 mathserif,
 serif,
-utf8x,
+utf8,
 % ignorenonframetext,
 usepdftitle={false}, % не вставлять информацию из переменных \author \title
 % aspectratio=16:9
