feat(fonts): add new font sets : ibm plex, adobe source, stix2

--- a/makefiles/preamble/font/fontspec.tex
+++ b/makefiles/preamble/font/fontspec.tex
@@ -64,6 +64,15 @@
 %% OldFonts Latin Narrow
 % \input{preamble/font/fontspec/oldfonts-latin_narrow}
 
+%% STIX 
+% \input{preamble/font/fontspec/stix2}
+
+%% Source 
+% \input{preamble/font/fontspec/source}
+
+%% IBM Plex
+% \input{preamble/font/fontspec/plex}
+
 %}}}
 
 %%% Local Variables: 
