feat(main): rearrange directories

--- a/makefiles/preamble/include/main.tex
+++ b/makefiles/preamble/include/main.tex
@@ -15,46 +15,41 @@
 \usepackage{xifthen}
 
 % Check tex4ht
-%\provideboolean{texht}
-%\newif\iftexht\texhtfalse
-%\makeatletter
-%\@ifpackageloaded{tex4ht}{\texhttrue}{\texhtfalse}
-%\@ifpackageloaded{tex4xt}{\setboolean{texht}{true}}{\setboolean{texht}{false}}
-%\makeatother
+% \provideboolean{texht}
+% \newif\iftexht\texhtfalse
+% \makeatletter
+% \@ifpackageloaded{tex4ht}{\texhttrue}{\texhtfalse}
+% \@ifpackageloaded{tex4xt}{\setboolean{texht}{true}}{\setboolean{texht}{false}}
+% \makeatother
 
 % Check revtex
 \provideboolean{revtex}
 \makeatletter
 \@ifclassloaded{revtex4-1}{\setboolean{revtex}{true}}{\setboolean{revtex}{false}}
 \ifthenelse{\boolean{revtex}}{}{%
-    \@ifclassloaded{revtex4}{\setboolean{revtex}{true}}{\setboolean{revtex}{false}}
+  \@ifclassloaded{revtex4}{\setboolean{revtex}{true}}{\setboolean{revtex}{false}}
 }
 \makeatother
 
 \ifthenelse{\boolean{luatex}}
-    {\input preamble/lualatex}
-%else
+{\input preamble/engine/lualatex}
 {\ifthenelse{\boolean{xetex}}
-    {\input preamble/xelatex}
-    %else
-    {
-        \input preamble/latex
-        \ifpdf
-            \input preamble/pdflatex
-        \fi
-    }
+  {\input preamble/engine/xelatex}
+  {
+    \input preamble/engine/latex
+    \ifpdf\input preamble/engine/pdflatex\fi
+  }
 }
 
-\input preamble/pkg
+\input preamble/engine/pkg
 
-\input preamble/local
+\input preamble/engine/local
 
 \iftexht
-    \input preamble/tex4ht
+\input preamble/engine/tex4ht
 \fi
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "default"
 %%% coding: utf-8-unix
 %%% End: 
