--- a/makefiles/preamble/include/preamble.tex
+++ b/makefiles/preamble/include/preamble.tex
@@ -1,6 +1,9 @@
+%%% 
+
+\input preamble/class
+\input preamble/include/main
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "default"
 %%% coding: utf-8-unix
 %%% End: 
