--- a/makefiles/preamble/pkg.tex
+++ b/makefiles/preamble/pkg.tex
@@ -1,7 +1,4 @@
-%%
-
 \usepackage{etex}
-
 %% Исправления
 \input{preamble/pkg/fix}
 %% Локализация
@@ -14,28 +11,26 @@
 \input{preamble/pkg/math}
 %% Таблицы
 \input{preamble/pkg/table/misc}
-%\input{preamble/pkg/table/mdw}
-%\input{preamble/pkg/table/pgf}
+% \input{preamble/pkg/table/mdw}
+% \input{preamble/pkg/table/pgf}
 %% Работа с графикой
 \input{preamble/pkg/graphics}
-%\input{preamble/pkg/pstrics}
+% \input{preamble/pkg/pstrics}
 %% Пакеты для библиографии
-%{{{ BibTeX
+%%% BibTeX
 \input{preamble/pkg/bibtex/common}
-%\input{preamble/pkg/bibtex/bibunits}
-%}}}
-%{{{ BibLaTeX
-%\input{preamble/pkg/biblatex/style/gost}
-%\input{preamble/pkg/biblatex/style/ieee}
-%\input{preamble/pkg/biblatex/style/nature}
-%\input{preamble/pkg/biblatex/style/phys}
-%\input{preamble/pkg/biblatex/fixmisc}
-%}}}
+% \input{preamble/pkg/bibtex/bibunits}
+%%% BibLaTeX
+% \input{preamble/pkg/biblatex/style/gost}
+% \input{preamble/pkg/biblatex/style/ieee}
+% \input{preamble/pkg/biblatex/style/nature}
+% \input{preamble/pkg/biblatex/style/phys}
+% \input{preamble/pkg/biblatex/fixmisc}
 %% Пакеты для листингов
 \input{preamble/pkg/lst/common}
-%\input{preamble/pkg/lst/listings}
-%\input{preamble/pkg/lst/minted}
-%\input{preamble/pkg/lst/texments}
+% \input{preamble/pkg/lst/listings}
+% \input{preamble/pkg/lst/minted}
+% \input{preamble/pkg/lst/texments}
 
 
 %%% Local Variables:
