fix(preamble): fix minted for minted-3

--- a/makefiles/preamble/font/unicode-math.tex
+++ b/makefiles/preamble/font/unicode-math.tex
@@ -12,7 +12,7 @@
 % but italic lowercase latin. Finally, it is not unknown to use upright
 % letters for all characters, as seen in the Euler fonts.
 
-% \unimathsetup{math-style=ISO}
+\unimathsetup{math-style=ISO}
 % \unimathsetup{math-style=TeX}
 % \unimathsetup{math-style=french}
 % \unimathsetup{math-style=upright}
