fix(makefiles): disable loading bibtex/common

--- a/makefiles/preamble/pkg.tex
+++ b/makefiles/preamble/pkg.tex
@@ -18,7 +18,7 @@
 % \input{preamble/pkg/pstrics}
 %% Пакеты для библиографии
 %%% BibTeX
-\input{preamble/pkg/bibtex/common}
+% \input{preamble/pkg/bibtex/common}
 % \input{preamble/pkg/bibtex/bibunits}
 %%% BibLaTeX
 % \input{preamble/pkg/biblatex/style/gost}
